--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@web3modal/ethers": "^4.2.3",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
